force-app/main/default/objects/Extole_Writeback_Cfg__c/Extole_Writeback_Cfg__c.object-meta.xml
<CustomObject>
    <label>Extole Writeback Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extole Writeback Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>