force-app/main/default/objects/Extole_Writeback_Cfg__c/fields/Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Field_Mappings__c</fullName>
    <label>Field Mappings</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>