force-app/main/default/objects/Extole_Writeback_Cfg__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ACTIVE</fullName><default>true</default><label>ACTIVE</label></value>
            <value><fullName>INACTIVE</fullName><default>false</default><label>INACTIVE</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>